--- a/.github/workflows/sync-readme-index.yml
+++ b/.github/workflows/sync-readme-index.yml
@@ -27,3 +27,10 @@ jobs:
           git push origin main
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Trigger gh-pages workflow
+        run: |
+          curl -X POST -H "Accept: application/vnd.github.v3+json" \
+          -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+          https://api.github.com/repos/HOPLAB-LBP/hoplab-wiki/dispatches \
+          -d '{"event_type":"start-gh-pages"}'
