--- a/.github/workflows/sync-readme-contributing.yml
+++ b/.github/workflows/sync-readme-contributing.yml
@@ -1,4 +1,4 @@
-name: Sync README to index.md
+name: Sync README to contribute.md
 
 on:
   push:
@@ -14,16 +14,16 @@ jobs:
       - name: Checkout repository content
         uses: actions/checkout@v2
 
-      - name: Copy README.md to index.md
+      - name: Copy README.md to contribute.md
         run: |
-          cp README.md docs/index.md
+          cp README.md docs/contribute.md
 
       - name: Commit and push changes
         run: |
           git config --global user.name "${{ github.actor }}"
           git config --global user.email "${{ github.actor }}@users.noreply.github.com"
-          git add docs/index.md
-          git commit -m "Sync README.md to docs/index.md"
+          git add docs/contribute.md
+          git commit -m "Sync README.md to docs/contribute.md"
           git push origin main
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
