--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,13 +7,37 @@ nav:
 
 theme:
   name: material
-  logo: thicker_white_brain.svg
-  favicon: hoplab_favicon_white.ico 
-  
-extra_css:
-  - extra.css
+  logo: assets/thicker_white_brain.svg
+  favicon: assets/hoplab_favicon_white.ico 
   
 markdown_extensions:
+  - pymdownx.superfences
+  - pymdownx.tabbed
+  - pymdownx.tilde
+  - pymdownx.emoji:
+      emoji_index: !!python/name:materialx.emoji.twemoji
+      emoji_generator: !!python/name:materialx.emoji.to_svg
+  - pymdownx.tasklist:
+      custom_checkbox: true
   - toc:
       permalink: true
+  - attr_list
+  - def_list
+  - footnotes
+  - meta
+  - pymdownx.arithmatex
+  - pymdownx.betterem
+  - pymdownx.caret
+  - pymdownx.inlinehilite
+  - pymdownx.keys
+  - pymdownx.mark
+  - pymdownx.smartsymbols
+  - pymdownx.snippets
+  - pymdownx.striphtml
+  - pymdownx.magiclink
+  - pymdownx.progressbar
+  - pymdownx.details
 
+extra_css:
+  - stylesheets/extra.css
+  
