--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,7 +3,7 @@ site_name: Hoplab Wiki
 nav:
   - Home: index.md
   - Get started in the lab: getstarted.md
-  - Functional MRI: Functional MRI/fmri-fome.md
+  - Functional MRI: FunctionalMRI/fmri-home.md
   - Contribute: contribute.md
 
 theme:
