--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,7 +15,7 @@ nav:
     - fMRI analysis workflow: fmri/fmri-andrea-workflow.md
   - Science outreach: outreach.md
   - Contribute: contribute.md
-
+  - Test: test.md
 
 theme:
   name: material
