--- a/.github/workflows/sync-readme-contributing.yml
+++ b/.github/workflows/sync-readme-contributing.yml
@@ -13,43 +13,38 @@ jobs:
     steps:
       - name: Checkout repository content
         uses: actions/checkout@v4
+        with:
+          ref: ${{ github.head_ref }}
 
       - name: Copy README.md to contribute.md
         run: |
           cp README.md docs/contribute.md
 
-      - name: Configure Git
+      - name: Commit and push changes
         run: |
           git config --global user.name "${{ github.actor }}"
           git config --global user.email "${{ github.actor }}@users.noreply.github.com"
-
-      - name: Fetch latest changes
-        run: git fetch origin
-
-      - name: Create new branch and rebase
-        run: |
-          git checkout -b sync-readme
-          git rebase origin/main
           git add docs/contribute.md
           git commit -m "Sync README.md to docs/contribute.md"
-          git push origin sync-readme
+          git push origin HEAD:${{ github.head_ref }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Create Pull Request
+        if: ${{ github.event_name == 'push' && github.base_ref == 'main' }}
         id: cpr
         uses: peter-evans/create-pull-request@v5
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           commit-message: Sync README.md to docs/contribute.md
-          branch: sync-readme
+          branch: ${{ github.head_ref }}
           title: Sync README.md to docs/contribute.md
           body: This PR syncs README.md with docs/contribute.md
           base: main
           merge-method: merge
 
       - name: Auto Merge Pull Request
-        if: steps.cpr.outputs.pull-request-number != ''
+        if: ${{ steps.cpr.outputs.pull-request-number != '' }}
         uses: ahmadnassri/action-auto-merge@v2
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
@@ -57,8 +52,8 @@ jobs:
           merge-method: merge
 
       - name: Delete Branch After Merge
-        if: steps.cpr.outputs.pull-request-number != ''
+        if: ${{ steps.cpr.outputs.pull-request-number != '' }}
         run: |
-          git push origin --delete sync-readme
+          git push origin --delete ${{ github.head_ref }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
