--- a/.github/workflows/sync-readme-contributing.yml
+++ b/.github/workflows/sync-readme-contributing.yml
@@ -1,9 +1,7 @@
 name: Sync README to contribute.md
 
 on:
-  push:
-    branches:
-      - main
+  pull_request:
     paths:
       - README.md
 
@@ -14,64 +12,18 @@ jobs:
       - name: Checkout repository content
         uses: actions/checkout@v4
         with:
-          ref: ${{ github.sha }}
+          ref: ${{ github.event.pull_request.head.sha }}
 
       - name: Copy README.md to contribute.md
         run: |
           cp README.md docs/contribute.md
 
       - name: Commit and push changes
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          git config --global user.name "${{ github.actor }}"
-          git config --global user.email "${{ github.actor }}@users.noreply.github.com"
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add docs/contribute.md
-          git commit -m "Sync README.md to docs/contribute.md"
-          git push origin HEAD:${{ github.ref }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Create Pull Request
-        id: cpr
-        uses: peter-evans/create-pull-request@v5
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          commit-message: Sync README.md to docs/contribute.md
-          branch: ${{ github.ref }}
-          title: Sync README.md to docs/contribute.md
-          body: This PR syncs README.md with docs/contribute.md
-          base: main
-          merge-method: merge
-
-      - name: Auto Merge Pull Request
-        if: steps.cpr.outputs.pull-request-url != ''
-        uses: actions/github-script@v6
-        with:
-          script: |
-            const pull_request_url = `{{ steps.cpr.outputs.pull-request-url }}`;
-            const pull_request_number = pull_request_url.split('/').pop();
-            await github.pulls.merge({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              pull_number: pull_request_number,
-              merge_method: 'merge'
-            });
-
-      - name: Delete Branch After Merge
-        if: steps.cpr.outputs.pull-request-url != ''
-        uses: actions/github-script@v6
-        with:
-          script: |
-            const pull_request_url = `{{ steps.cpr.outputs.pull-request-url }}`;
-            const pull_request_number = pull_request_url.split('/').pop();
-            const { data: pull_request } = await github.pulls.get({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              pull_number: pull_request_number
-            });
-            await github.git.deleteRef({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              ref: `heads/${pull_request.head.ref}`
-            });
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          git commit -m "Automatic Sync of README.md to docs/contribute.md"
+          git push origin HEAD:${{ github.event.pull_request.head.ref }}
