--- a/.github/workflows/sync-readme-contributing.yml
+++ b/.github/workflows/sync-readme-contributing.yml
@@ -25,5 +25,5 @@ jobs:
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add docs/contribute.md
-          git commit -m "Sync README.md to docs/contribute.md [ci skip]"
+          git commit -m "Auto Sync README.md to docs/contribute.md"
           git push origin HEAD:${{ github.event.pull_request.head.ref }}
