--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,7 +9,7 @@ edit_uri: edit/main/docs/
 
 extra:
   social:
-      link: 'https://github.com/HOPLAB-LBP/hoplab-wiki/edit/main/docs/{path}'
+    - link: 'https://github.com/HOPLAB-LBP/hoplab-wiki/edit/main/docs/{path}'
       name: 'Edit this page'
 nav:
   - Home: index.md
