--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,7 +11,7 @@ nav:
     - Practical set-up: get-started/practical-setup.md
     - Computer set-up: get-started/computer-setup.md
     - KU Loket: get-started/kuloket.md
-    - Administrative procedures: admin-procedures.md
+    - Administrative procedures: get-started/admin-procedures.md
   - fMRI:
     - General information: fmri/fmri-general.md
     - Hospital information: fmri/fmri-hospital.md
