--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -99,8 +99,8 @@ plugins:
   - offline
   - privacy
   - search
-  - git-revision-date-localized
-      type: 'datetime'
+  - git-revision-date-localized:
+      type: datetime
   - task-collector:
       output_file: 'tasks-list.md'
       
