--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,1 +1,5 @@
-@costantinoai
+# These owners will be the default owners for everything in
+# the repo. Unless a later match takes precedence,
+# @costantinoai will be requested for
+# review when someone opens a pull request.
+*       @costantinoai
