Fix timezone in page last change

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -103,6 +103,7 @@ plugins:
   - search
   - git-revision-date-localized:
       type: datetime
+      timezone: Europe/Brussels
   - task-collector:
       output_file: 'tasks-list.md'
       
