new student start pack section

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,6 +12,7 @@ nav:
     - Practical set-up: get-started/practical-setup.md
     - Computer set-up: get-started/computer-setup.md
     - Administrative procedures: get-started/admin-procedures.md
+    - Student starter pack: get-started/student-starter-pack.md
   - Research:
     - research/index.md
     - Coding practices:
