--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,6 +14,10 @@ nav:
     - Administrative procedures: get-started/admin-procedures.md
   - Research:
     - research/index.md
+    - Ethical approval:
+      - research/ethics/index.md
+      - EC onderzoek: research/ethics/MEC.md
+      - SMEC: research/ethics/SMEC.md
     - Coding practices:
       - research/coding/index.md
     - fMRI:
