--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -125,8 +125,7 @@ markdown_extensions:
   
 plugins:
   - offline
-  - privacy:
-      enabled: !ENV [CI, false]
+  - privacy
   - search
   - git-revision-date-localized:
       type: datetime
