--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -21,6 +21,10 @@ nav:
       - SMEC: research/ethics/SMEC.md
     - Coding practices:
       - research/coding/index.md
+    - Behaviour:
+      - research/behaviour/index.md
+      - Find participants: research/behaviour/participants.md
+      - Set up your experiment: research/behaviour/experimental-setup.md
     - fMRI:
       - research/fmri/index.md
       - First steps: research/fmri/fmri-get-started.md
@@ -34,8 +38,6 @@ nav:
           - 5. Regions of interest: research/fmri/analysis/fmri-rois.md
           - 6. Multi-variate analysis: research/fmri/analysis/fmri-mvpa.md
           - fMRI workflow example: research/fmri/analysis/fmri-andrea-workflow.md
-    - Behaviour:
-      - research/behaviour/index.md
     - EEG:
       - research/eeg/index.md
     - Eye-tracking:
