--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -133,8 +133,8 @@ plugins:
   - git-revision-date-localized:
       type: datetime
       timezone: Europe/Brussels
-  - task-collector:
-      output_file: 'tasks-list.md'
+#  - task-collector:
+#      output_file: 'tasks-list.md'
       
 extra_css:
   - stylesheets/extra.css
