--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -80,7 +80,7 @@ theme:
     - navigation.tabs
     - navigation.tabs.sticky
     - navigation.top
-    - navigation.expand
+    # - navigation.expand
     - navigation.sections
     # - toc.integrate # (1)!
     - search.highlight
