--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -129,6 +129,7 @@ plugins:
   - offline
   - privacy
   - search
+  - git-authors
   - git-revision-date-localized:
       type: datetime
       timezone: Europe/Brussels
