--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -144,6 +144,7 @@ extra:
   consent:
     title: Cookie consent
     description: >-
+      Please, consider disabling your ad-blocker and allowing cookies For this Wiki . 
       We use cookies to recognize your repeated visits and preferences, as well
       as to measure the effectiveness of our documentation and whether users
       find what they're searching for. With your consent, you're helping us to
