--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -165,4 +165,4 @@ extra:
           data: 0
           note: >- 
             Thanks for your feedback! Help us improve this page by
-            using our <a href="..." target="_blank" rel="noopener">feedback form</a>.
+            opening a new <a href="https://github.com/HOPLAB-LBP/hoplab-wiki/issues/new" target="_blank" rel="noopener">Issue</a>, or contact a Wiki manager.
