--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -165,4 +165,4 @@ extra:
           data: 0
           note: >- 
             Thanks for your feedback! Help us improve this page by
-            opening a new <a href="https://github.com/.../issues/new/?title=[Feedback]+{title}+-+{url}" target="_blank" rel="noopener">Issue</a>, or contact a Wiki manager.
+            opening a new <a href="https://github.com/HOPLAB-LBP/hoplab-wiki/issues/new/?title=[Feedback]+{title}+-+{url}" target="_blank" rel="noopener">Issue</a>, or contact a Wiki manager.
