--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -144,7 +144,7 @@ extra:
   consent:
     title: Cookie consent
     description: >-
-      Please, consider disabling your ad-blocker and allowing cookies For this Wiki . 
+      Please, consider disabling your ad-blocker and allowing cookies for this Wiki . 
       We use cookies to recognize your repeated visits and preferences, as well
       as to measure the effectiveness of our documentation and whether users
       find what they're searching for. With your consent, you're helping us to
@@ -166,3 +166,7 @@ extra:
           note: >- 
             Thanks for your feedback! Help us improve this page by
             opening a new <a href="https://github.com/HOPLAB-LBP/hoplab-wiki/issues/new/?title=[Feedback]+{title}+-+{url}" target="_blank" rel="noopener">Issue</a>, or contact a Wiki manager.
+            
+copyright: >
+  <a href="#__consent">Change cookie settings</a>            
+      
