--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -35,7 +35,8 @@ nav:
           - 1. Set-up you environment: research/fmri/analysis/fmri-setup-env.md
           - 2. BIDS conversion: research/fmri/analysis/fmri-bids-conversion.md
           - 3. Pre-processing and QA: research/fmri/analysis/fmri-prepocessing-qa.md
-          - 4. First-level analysis: research/fmri/analysis/fmri-glm.md
+          - 4a. First-level analysis - GUI: research/fmri/analysis/fmri-glm.md
+          - 4b. First-level analysis - Scripting: research/fmri/analysis/fmri-glm-script.md
           - 5. Regions of interest: research/fmri/analysis/fmri-rois.md
           - 6. Multi-variate analysis: research/fmri/analysis/fmri-mvpa.md
           - fMRI workflow example: research/fmri/analysis/fmri-andrea-workflow.md
