--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -23,8 +23,10 @@ nav:
       - research/coding/index.md
     - Behaviour:
       - research/behaviour/index.md
-      - Find participants: research/behaviour/participants.md
-      - Set up your experiment: research/behaviour/experimental-setup.md
+      - Find participants: research/behaviour/bh-participants.md
+      - Set up your experiment: 
+        - research/behaviour/experimental-setup/index.md
+        - Online Experiments (Pavlovia): research/behaviour/experimental-setup/pavlovia.md
     - fMRI:
       - research/fmri/index.md
       - First steps: research/fmri/fmri-get-started.md
