--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -26,7 +26,8 @@ nav:
       - Find participants: research/behaviour/participants.md
       - Set up your experiment: research/behaviour/experimental-setup.md
       - Behavioural tasks: research/behaviour/task-scripts.md
-          - research/behaviour/task-scripts/MDS-task-script/index.md
+          - research/behaviour/task-scripts/index.md
+          - MDS Task Script: research/behaviour/task-scripts/MDS-task-script.md
     - fMRI:
       - research/fmri/index.md
       - First steps: research/fmri/fmri-get-started.md
