--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -27,7 +27,7 @@ nav:
       - Set up your experiment: research/behaviour/experimental-setup.md
       - Behavioural tasks: research/behaviour/task-scripts.md
           - research/behaviour/task-scripts/index.md
-          - MDS Task Script: research/behaviour/task-scripts/MDS-task-script.md
+          - 1. MDS Task Script: research/behaviour/task-scripts/mds-script.md
     - fMRI:
       - research/fmri/index.md
       - First steps: research/fmri/fmri-get-started.md
