--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -26,6 +26,7 @@ nav:
       - Find participants: research/behaviour/participants.md
       - Set up your experiment: research/behaviour/experimental-setup.md
       - Behavioural tasks:
+      - research/behaviour/task-scripts.md
         - MDS task script: research/behaviour/task-scripts/MDS-task-script.md
     - fMRI:
       - research/fmri/index.md
