Update fmri-procedure and fmri-get-started
Update pseudonymization, access and facturation info

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -138,7 +138,7 @@ markdown_extensions:
   
 plugins:
   - offline
-  - privacy
+#  - privacy
   - search
   - git-authors
   - git-revision-date-localized:
